# cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  cpp.jsonc  cv.jsonc  cv.slnx  cv.vcxproj  cv.vcxproj.filters  package.json  packages.config  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  uv.toml
.github/workflows/: notify.yaml  release.yaml
cpp/: CMakeLists.txt
cpp/src/: app.cpp  app.hpp  cpp.cpp  cpp.hpp  main.cpp
libs/: FindModules.cmake  FindPane.cmake
src/: app.cpp  app.hpp  cli11.cpp  color.hpp  main.cpp  project.hpp.in  version.hpp.in
src/include/: app.hpp  color.hpp
